--- a/.github/workflows/vavoo_app.yml
+++ b/.github/workflows/vavoo_app.yml
@@ -36,7 +36,7 @@ jobs:
            git config --global user.name "actions-user"
            git config --global user.email "actions@github.com"
           
-           git add vavoo_app_*.m3u8
+           git add vavoo_app.m3u8
            git diff --staged --quiet || git commit -m "Update M3U8 files"
            git push --force
         
